--- a/nodejs-api/Dockerfile
+++ b/nodejs-api/Dockerfile
@@ -2,12 +2,21 @@ FROM node:16-alpine
 
 WORKDIR /opt/app
 
-COPY package.json yarn.lock .
-
+# Install dependencies
+COPY package.json yarn.lock ./
 RUN yarn
 
+# Copy code, migrations & db-migrate config
 COPY src src
 COPY migrations migrations
 COPY database.json .
 
-CMD npm run migrate-and-start
+# Copy tests & Jest config
+COPY tests tests
+COPY jest.config.js .
+
+# Add wait tool
+ADD https://github.com/ufoscout/docker-compose-wait/releases/download/2.11.0/wait /opt/wait
+RUN chmod +x /opt/wait
+
+CMD /opt/wait && npm run migrate-and-start
