--- a/nodejs-api/package.json
+++ b/nodejs-api/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "migrate-and-start": "ls && npx db-migrate up -e dev && node src/index"
   },
   "keywords": [],
@@ -18,6 +18,8 @@
   "devDependencies": {
     "db-migrate": "^0.11.13",
     "db-migrate-mysql": "^2.2.0",
-    "eslint": "^8.39.0"
+    "eslint": "^8.39.0",
+    "jest": "^29.5.0",
+    "supertest": "^6.3.3"
   }
 }
