--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -32,7 +32,7 @@ jobs:
   Explore-GitHub-Actions:
     runs-on: ubuntu-latest
     needs: paths-filter
-    if: needs.paths-filter.outputs.output1 == 'true'
+    if: needs.paths-filter.outputs.backend == 'true'
     steps:
       - run: echo "🎉 The job was automatically triggered by a ${{ github.event_name }} event."
       - run: echo "🐧 This job is now running on a ${{ runner.os }} server hosted by GitHub!"
