--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -1,38 +1,44 @@
 # https://stackoverflow.com/a/70711156/1534675
 name: GitHub Actions Demo
 run-name: ${{ github.actor }} is testing out GitHub Actions 🚀
-on: [push]
+on:
+  push:
+    paths:
+      - "nodejs-api/**"
+      - "docker-compose.yml"
+      - "docker-compose.test.backend.yml"
+      - "run-backend-tests.sh"
 env:
   ACTIONS_RUNNER_DEBUG: true
 jobs:
-  paths-filter:
+  # paths-filter:
+  #   runs-on: ubuntu-latest
+  #   outputs:
+  #     output1: ${{ steps.filter.outputs.workflows }}
+  #   steps:
+  #     - uses: actions/checkout@v3
+  #     - run: echo "💡 The ${{ github.repository }} repository has been cloned to the runner."
+  #     - uses: dorny/paths-filter@v2
+  #       id: filter
+  #       with:
+  #         filters: |
+  #           backend:
+  #             - 'nodejs-api/**'
+  #             - 'docker-compose.yml'
+  #             - 'docker-compose.test.backend.yml'
+  #             - 'run-backend-tests.sh'
+  #     # run only if 'backend' files were changed
+  #     - name: backend tests
+  #       if: steps.filter.outputs.backend == 'true'
+  #       run: echo "Backend tests"
+  #     # run only if not 'backend' files were changed
+  #     - name: not backend tests
+  #       if: steps.filter.outputs.backend != 'true'
+  #       run: echo "NOT Backend tests"
+  run-backend-tests:
     runs-on: ubuntu-latest
-    outputs:
-      output1: ${{ steps.filter.outputs.workflows }}
-    steps:
-      - uses: actions/checkout@v3
-      - run: echo "💡 The ${{ github.repository }} repository has been cloned to the runner."
-      - uses: dorny/paths-filter@v2
-        id: filter
-        with:
-          filters: |
-            backend:
-              - 'nodejs-api/**'
-              - 'docker-compose.yml'
-              - 'docker-compose.test.backend.yml'
-              - 'run-backend-tests.sh'
-      # run only if 'backend' files were changed
-      - name: backend tests
-        if: steps.filter.outputs.backend == 'true'
-        run: echo "Backend tests"
-      # run only if not 'backend' files were changed
-      - name: not backend tests
-        if: steps.filter.outputs.backend != 'true'
-        run: echo "NOT Backend tests"
-  Explore-GitHub-Actions:
-    runs-on: ubuntu-latest
-    needs: paths-filter
-    if: needs.paths-filter.outputs.backend == 'true'
+    # needs: paths-filter
+    # if: needs.paths-filter.outputs.backend == 'true'
     steps:
       - run: echo "🎉 The job was automatically triggered by a ${{ github.event_name }} event."
       - run: echo "🐧 This job is now running on a ${{ runner.os }} server hosted by GitHub!"
