even ls doesn't seem to work

--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -50,5 +50,6 @@ jobs:
       - name: List files in the repository
         run: |
           ls ${{ github.workspace }}
+      - run: ls
       - run: ./run-backend-tests.sh
       - run: echo "🍏 This job's status is ${{ job.status }}."
