--- a/react-web-client/Dockerfile
+++ b/react-web-client/Dockerfile
@@ -2,12 +2,15 @@ FROM node:16-alpine
 
 WORKDIR /opt/app
 
-COPY package.json yarn.lock .
+COPY package.json yarn.lock ./
 
 RUN yarn
 
 COPY src src
 COPY public public
-COPY index.html vite.config.js .
+COPY index.html vite.config.js ./
+
+COPY jest.config.cjs .
+COPY babel.config.cjs .
 
 CMD yarn dev --host
