--- a/.github/workflows/frontend-tests.yml
+++ b/.github/workflows/frontend-tests.yml
@@ -35,7 +35,7 @@ jobs:
   #     - name: not backend tests
   #       if: steps.filter.outputs.backend != 'true'
   #       run: echo "NOT Backend tests"
-  run-backend-tests:
+  run-frontend-tests:
     runs-on: ubuntu-latest
     # needs: paths-filter
     # if: needs.paths-filter.outputs.backend == 'true'
